--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,14 +22,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Setup Node
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: "20"
         cache: "npm"
         cache-dependency-path: "app/package-lock.json"
 
-    - name: Install deps
+    - name: Install dependencies
       run: npm ci
 
     - name: Build
